all countries display in drop down select options

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
   </head>
   <body>
     <div id="app">
-
+      <h1>Countries</h1>
+      <form class="">
+        <select class="" name="">
+          <option v-for="country in countries">{{ country.name }}</option>
+        </select>
+      </form>
     </div>
   </body>
 </html>
