--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Countries API</title>
-    <script src="./js/bundle.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <h1>Countries</h1>
-      <form class="">
-        <select class="" name="">
-          <option v-for="country in countries">{{ country.name }}</option>
-        </select>
-      </form>
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Countries API</title>
+  <script src="./js/bundle.js"></script>
+</head>
+<body>
+  <div id="app">
+    <h1>Countries</h1>
+    <form class="">
+      <select v-model="index" v-on:change="selectCountry(index)">
+        <option
+        v-for="(country, index) in countries"
+        v-bind:value="index" >
+        {{ country.name }}
+      </option>
+    </select>
+  </form>
+  <button type="button" v-on:click="saveToFavourites">Save to favourite</button>
+  <ul>
+    <li>
+      <h1 v-if="selectedCountry">{{ selectedCountry.name}}</h1>
+      <img id="dog-img" v-if="selectedCountry.flag" :src="selectedCountry.flag" >
+    </li>
+  </ul>
+  <h2>Favourite Countries</h2>
+  <ul>
+    <li v-for="country in favouriteCountries"> {{ country.name }}</li>
+  </ul>
+
+
+</div>
+</body>
 </html>
