--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,19 @@
   <ul>
     <li>
       <h1 v-if="selectedCountry">{{ selectedCountry.name}}</h1>
-      <img id="dog-img" v-if="selectedCountry.flag" :src="selectedCountry.flag" >
+      <h2>Neighbouring Countries</h2>
+      <ul>
+        <li v-for="country in borderingCountries">{{country}}</li>
+      </ul>
     </li>
+    <img id="flag-img" v-if="selectedCountry.flag" :src="selectedCountry.flag" >
+
   </ul>
   <h2>Favourite Countries</h2>
   <ul>
-    <li v-for="country in favouriteCountries"> {{ country.name }}</li>
+    <li v-for="country in favouriteCountries">
+      {{ country.name }}
+    </li>
   </ul>
 
 
